# agentcp

./: .gitignore  LICENCE  README copy.md  README.md  agentcp.py  agentprofile.json  create_profile.py  create_profile_weather.py  hcp.py  llm_server.py  requirements.txt  workflow.py
agentcp/: __init__.py  agentcp.py  ap_client.py  auth_client.py  ca_client.py  ca_root.py  client.py  env.py  heartbeat_client.py  html_util.py  log.py  message.py  message_client.py  message_serialize.py  open_ai_message.py  session_manager.py  stream_client.py  wss_binary_message.py
agentcp/db/: db_mananger.py
agentcp_c++_sdk/: CMakeLists.txt  GROUP_SDK_COMPARISON.md  GROUP_SDK_GUIDE.md
agentcp_c++_sdk/.esdata/: evol_agent_chat_hybrid.db-shm  evol_agent_chat_hybrid.db-wal  evol_chat_hybrid.db-shm  evol_chat_hybrid.db-wal  key_value_store.json  web_history.db-shm  web_history.db-wal
agentcp_c++_sdk/android/: CMakeLists.txt  INTEGRATION_GUIDE.md  build.gradle  build_aar.bat  build_aar.sh  consumer-rules.pro  download_wrapper.bat  proguard-rules.pro  settings.gradle
agentcp_c++_sdk/android/openssl/: build_openssl.py
agentcp_c++_sdk/android/openssl/perl_lib/Locale/Maketext/: Simple.pm
agentcp_c++_sdk/android/openssl/prebuilt/include/openssl/: configuration.h
agentcp_c++_sdk/android/src/main/: AndroidManifest.xml
agentcp_c++_sdk/android/src/main/cpp/: agentcp_jni.cpp
agentcp_c++_sdk/android/src/main/java/com/agentcp/: AgentCP.java  AgentCPException.java  AgentID.java  AgentState.java  GroupEventCallback.java  GroupMessageCallback.java  GroupSyncHandler.java  InviteCallback.java  LogLevel.java  MessageCallback.java  Result.java  StateChangeCallback.java
agentcp_c++_sdk/android/src/main/java/com/agentcp/store/: ChatMessage.java  Conversation.java  GroupChatMessage.java  GroupConversation.java  GroupMessageStore.java  MessageDbHelper.java  MessageStore.java  MessageStoreException.java  StorageConfig.java  StorageMode.java  StoragePermissionHelper.java
agentcp_c++_sdk/core/: CMakeLists.txt
agentcp_c++_sdk/core/include/agentcp/: agentcp.h  cursor_store.h  export.h  group_client.h  group_events.h  group_operations.h  group_types.h  result.h  types.h  version.h
agentcp_c++_sdk/core/src/: acp_log.h  agentcp.cpp  agentid.cpp  crypto.cpp  crypto.h  file_client.cpp  internal.h  session.cpp  session_manager.cpp  stream.cpp  utils.cpp
agentcp_c++_sdk/core/src/client/: auth_client.cpp  auth_client.h  heartbeat_client.cpp  heartbeat_client.h  message_client.cpp  message_client.h  stream_client_impl.cpp  stream_client_impl.h
agentcp_c++_sdk/core/src/group/: cursor_store.cpp  group_client.cpp  group_events.cpp  group_operations.cpp  group_types.cpp
agentcp_c++_sdk/core/src/net/: http_client.cpp  http_client.h  udp_socket.cpp  udp_socket.h  websocket_client.cpp  websocket_client.h
agentcp_c++_sdk/core/src/protocol/: auth_protocol.cpp  auth_protocol.h  binary_protocol.cpp  binary_protocol.h  heartbeat_protocol.cpp  heartbeat_protocol.h  message_protocol.cpp  message_protocol.h
agentcp_c++_sdk/core/tests/: CMakeLists.txt  test_agentcp.cpp  test_concurrent.cpp  test_lifecycle.cpp  test_session.cpp
agentcp_c++_sdk/docs/: 00_DELIVERY_INDEX.md  01_SCOPE_GOALS.md  02_ARCHITECTURE.md  03_PROTOCOLS.md  04_CORE_MODULES.md  05_CONCURRENCY_STATE.md  06_STORAGE_LAYOUT.md  07_SECURITY_PRIVACY.md  08_SDK_API.md  09_MOBILE_BINDINGS.md  10_TESTING_VALIDATION.md  11_MILESTONES_RISKS.md  12_INTEGRATION_GUIDE.md
agentcp_c++_sdk/ios/: CMakeLists.txt  build_xcframework.sh
agentcp_c++_sdk/ios/include/: AgentCP.h  AgentCPTypes.h  AgentID.h
agentcp_c++_sdk/ios/src/: AgentCP.mm  AgentCPTypes.mm  AgentID.mm
agentcp_node/: .gitignore  LICENSE  README.md  SDK_MESSAGE_GUIDE.md  group-join-via-link.md  package-lock.json  package.json  tsconfig.json
agentcp_node/.acp-data/: storage.json
agentcp_node/assets/: topic-context-partitioning.md
agentcp_node/docs/: ACP多设备群组数据同步流程文档.md  agent-group-mechanism.md  batch_push_sdk_changes.md  duty_sdk_changes.md  group-message-listener-guide.md  group-sdk-api.md  获取已加入群列表流程说明.md
agentcp_node/src/: agentcp.ts  agentmanager.ts  agentmd.ts  agentws.ts  api.ts  cert.ts  cli.ts  datamanager.ts  filesync.ts  heartbeat.ts  index.ts  interfaces.ts  message_serialize.ts  messagestore.ts  server.ts  utils.ts  websocket.ts
agentcp_python/: .gitignore  __init__.py  agent.py  agentprofile.json  create_profile.py  improved_scheduler.py  llm_agent_utils.py  mermaid.py  message.py  metrics.py
agentcp_python/ap/: __init__.py  ap_client.py
agentcp_python/backup/: metrics.json
agentcp_python/base/: client.py
agentcp_python/ca/: ca_client.py  ca_root.py
agentcp_python/db/: __init__.py
agentcp_python/docs/: heartbeat_issue_analysis.md
agentcp_python/file/: wss_binary_message.py
agentcp_python/heartbeat/: __init__.py
agentcp_python/monitoring/: monitoring_service.py  sliding_window.py  standalone_reader.py
agentcp_python/msg/: connection_manager.py  message_serialize.py  open_ai_message.py  websocket_file_receiver.py  wss_binary_message.py
agentcp_python/utils/: file_util.py
app/: .gitignore  BUILD_CONFIG.md  CHECKLIST.md  INDEX.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  README_AGENTCP.md  RELEASE_BUILD_GUIDE.md  SUMMARY.md  pubspec.yaml  新建 文本文档.txt
app/android/: settings.gradle.kts
app/lib/: main.dart
app/linux/: CMakeLists.txt
app/test/: widget_test.dart
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
base/: __init__.py  auth_client.py  env.py  html_util.py  log.py
ca/: __init__.py
db/: db_mananger.py
docs/: UDP_HEARTBEAT_FIX_REPORT.md
file/: __init__.py  file_client.py
heartbeat/: heartbeat_client.py
monitoring/: __init__.py  global_monitor.py  metrics_store.py
msg/: __init__.py  message_client.py  session_manager.py  stream_client.py  ws_logger.py
samples/agent_graph/: agentprofile.json  create_profile.py  main.py
samples/agent_use/: create_profile.py  main.py  readme.md
samples/ali_amap/: README.md
samples/compute_agent/: browser_user.py
utils/: __init__.py  proxy_bypass.py
(+108 files in other folders)
